--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>RAG with Free Grok</title>
+  <title>AgriSense</title>
 </head>
 <body>
   <div id="root"></div>
